[package]
name = "bb2_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
mongodb = "2.2.0"
yaml-rust = "0.4"
futures = "0.3"
include_dir = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio-stream = "0.1.9"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]
